# llvm_kernel_analysis

./: .gitignore  Compilation.py  emit-llvm.sh
Analyzer/src/: Analyzer.cpp  CMakeLists.txt  CallGraph.cpp  CallGraph.h
Analyzer/src/lib/: Analyzer.cpp  CMakeLists.txt  CallGraph.cpp  CallGraph.h
